# bigmath

./: .editorconfig  .gitignore  CMakeLists.txt  bigmath.cpp  main.cpp  parse.cpp
big/algorithm/: algorithm.cpp  algorithm.hpp  container.hpp
big/conv/: stringifiable.hpp
big/integer/: integer.cpp  integer.hpp
big/natural/: natural.cpp  natural.hpp
big/numeric/: numeric.hpp  polynomial.hpp  rational.hpp
big/parse/: expression.hpp  parse.hpp  parse_polynomial.hpp  polynomial.hpp
big/polynomial/: polynomial.cpp  polynomial.hpp
big/rational/: rational.cpp  rational.hpp
big/traits/: integer.hpp  natural.hpp  polynomial.hpp  rational.hpp  traits.hpp
test/: TestAlgorithms.cpp  TestExpressionParser  TestExpressionParser.cpp  TestInteger.cpp  TestNatural.cpp  TestPolynomial.cpp  TestRational.cpp
tst/: TestAlgorithms.cpp  TestInteger.cpp  TestNatural.cpp  TestPolynomial.cpp  TestRational.cpp
